Bug 147347 - Deleting rows with track changes enabled behaving kind of strange
Summary: Deleting rows with track changes enabled behaving kind of strange
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: bibisected, bisected, implementationError
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-02-10 13:38 UTC by Telesto
Modified: 2024-01-26 14:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (9.41 KB, application/vnd.oasis.opendocument.text)
2022-02-10 13:38 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-02-10 13:38:27 UTC
Description:
Deleting rows with track changes enabled behaving kind of strange

Steps to Reproduce:
1. Open the attached file
2. Press delete row button in the toolbar (A disappears, but row remains)
3. Press delete row again (row disappears)
4. Go to Edit -> Track changes -> Manage (notice nothing present)



Actual Results:
At step 2:
* Content disappears, but  row doesn't
* Cursor doesn't jump to next line, but sticks to the current row (different workflow)

At step 3:
* Row disappears, but also deletes the track changes entry


Expected Results:
Removing something by pressing delete table row second time seems wrong. 
Not moving the cursor to next line appears to be undesired too. 
Deleting the entry from track changes seems off too

The table cell being still visible but empty.. undesired


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 42c5506a9e9ef58efd8193a193464e3b49d481ca
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2022-02-10 13:38:39 UTC
Created attachment 178188 [details]
Example file
Comment 2 Telesto 2022-02-10 13:39:17 UTC
I'm not totally up to speed with the pre-existing bugs, so this might be reported already
Comment 3 Gabor Kelemen (Collabora) 2022-02-10 22:27:57 UTC
Started in 7.2:

https://git.libreoffice.org/core/+/05366b8e6683363688de8708a3d88cf144c7a2bf

author	László Németh <nemeth@numbertext.org>	Wed May 19 12:22:24 2021 +0200
committer	László Németh <nemeth@numbertext.org>	Thu May 20 00:01:37 2021 +0200

tdf#60382 sw offapi: add change tracking of table/row deletion

Before there was no CT event recorded at all, but the row disappeared in one step.

Adding CC to: László Németh
Comment 4 Commit Notification 2022-03-17 13:20:47 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/794fd10af7361d5a64a0f8bfbe5c8b5f308617a5

tdf#147347 sw: hide deleted table at deletion in Hide Changes

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2022-03-17 14:59:22 UTC
@Teleso, Gábor: thanks for reporting and bibisecting! Not tracked disappearing of the table row deleted second time solved in tdf#146622, hiding deleted row in Hide Changes mode solved in tdf#146962, and hiding deleted table in Hide Changes mode solved here.
Comment 6 Commit Notification 2022-03-21 10:02:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/5f95e6830b4bfe48dab2868152520fc2c4462b90

tdf#147347 sw: hide deleted table at deletion in Hide Changes

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2022-03-31 06:41:29 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a3988b2d147a2442b348d58b79dbd6e71472b7af
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded