tdf#147347 sw: hide deleted table at deletion in Hide Changes

Last deleted row of a table frame was visible in Hide Changes
mode, if it is deleted in Hide Changes mode.

Fix also missing immediate update of the table layout during
deleting only rows in the table.

Follow-up to commit a74c51025fa4519caaf461492e4ed8e68bd34885
"tdf#146962 sw: hide deleted row at deletion in Hide Changes"

Change-Id: Ic0bf09ac68dd336bd53e84e58f52ebe88ca56238